2018-03-07: icoutils 0.32.3 released.
  Fixed a segfault. (Martin Gieseking, Savannah bug 52319)
  Updated Gnulib stuff.

2017-10-31: icoutils 0.32.2 released.
  Corrected fix for savannah bug 52308 (caused wrestool to always
   fail).
  Added support for PE32+ binaries.

2017-10-31: icoutils 0.32.1 released.
  Fixed multiple issues found by Hanno Böck <hanno@hboeck.de> via
   fuzzing. (Savannah bugs 52307, 52308, 52313)

2017-09-02: icoutils 0.32.0 released.
  Fixed issues found by Jerzy Kramarz:
   Invalid memory allocation in icotool with malformed input.
   Infinite recursion in wrestool with malformed input.
  Added ability to specify minimum bit depth per image.
  Added ability to specify cursor hotspot per image.

2017-03-11: icoutils 0.31.3 released.
  Warning fixes and build improvements from Richard W.M. Jones <rjones@redhat.com>
  Fixed wrestool being broken. Reported by Richard W.M. Jones <rjones@redhat.com>

2017-03-06: icoutils 0.31.2 released.
  Various security fixes from Martin Gieseking,
  issues found by Jerzy Kramarz
  (CVE-2017-6009, CVE-2017-6010, CVE-2017-6011).

2017-01-08: icoutils 0.31.1 released.
  Security fixes:
    Colin Watson, Debian bug #850017
    Martin Gieseking, Fedora bug #1249276

2013-05-19: icoutils 0.31.0 released.
  Change placement of libintl dependency.
   Fixes build issues with external libintl (e.g. MinGW). (Sebastián Puebla)
  Solaris build fixes. (Mats Erik Andersson)
  Man page improvements. (Richard W.M. Jones)

2012-08-23: icoutils 0.30.0 released.
  Fix crash with libpng version prior to 1.2.25. (Martin Storsjö)
  Man page improvements. (Markus Schölzel)
  Limit size of extracted icon to size of resource.
   Fixes a segfault, see https://bugzilla.redhat.com/show_bug.cgi?id=701855 (Martin Gieseking).
   Also independently discovered and reported by Sasha Zivojinovic.

2010-02-14: icoutils 0.29.0 released.
  Maintainer position adopted by Frank Richter <frank.richter@gmail.com>.