@@ -1,3 +1,7 @@
+2018-??-??:
+  wrestool: Fix get_resource_id_quoted() to return heap-allocated string.
+   Found by Jonathan Liu.
+
 2018-03-07: icoutils 0.32.3 released.
   Fixed a segfault. (Martin Gieseking, Savannah bug 52319)
   Updated Gnulib stuff.
